--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "md5": "^2.2.1",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
